# NN-fundamental-properties

latch-problem/: .gitignore  .vimrc  CMakeLists.txt  Noise.hpp  README.md  RNN.hpp  rnn.cc  rootlogon.c
latch-problem/dynet/: dynet_version
